# LoCAL2

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  results_031_comparison.json  results_031_full_comparison.json  results_31b_mlx.json  results_31b_mlx_v031.json  results_baseline.json  results_e4b_v031.json  results_tq_gemma_4bit.json  results_tq_llama.json  results_turboquant.json  run_local.py
.claude/: plan_basetool_result_helper.html  plan_compaction_service.html  plan_local2.html  plan_local2_1b.html  plan_local2_2.html  plan_local2_3.html  plan_local2_5.html  plan_local2_6.html  plan_local2_phase10.html  plan_local2_phase12.html  plan_local2_phase13.html  plan_local2_phase14.html  plan_local2_phase15.html  plan_local2_phase16.html  plan_local2_phase17.html  plan_local2_phase18_xai.html  plan_local2_phase19_preferences.html  plan_local2_phase20_login.html  plan_local2_phase21_browser.html  plan_local2_phase23_context.html  plan_local2_phase25.html  plan_local2_phase7.html  plan_local2_phase8.html  plan_local2_plan2.html  plan_participant_base.html  plan_protocol_messages.html  plan_tool_dispatcher.html  plan_ws_bus_fix.html
config/: compaction.yaml  critic.yaml  datetime.yaml  documents.yaml  generator.yaml  get_topic.yaml  librarian.yaml  location.yaml  memory.yaml  persona.yaml  personas.yaml.archived  remember_this.yaml  save_topic.yaml  search_memory.yaml  semantic_scholar.yaml  set_the_stage.yaml  system.yaml  (+2 more)
(+184 files in other folders)
