[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local2"
version = "0.2.1"
description = "LoCAL2 — Loosely Coupled Agent Language model, second generation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "fastapi>=0.136.1",
    "uvicorn>=0.42.0",
    "websockets>=14.0",
    "pydantic>=2.12.5",
    "pyzmq>=27.1.0",
    "PySide6>=6.11.0",
    "PyYAML>=6.0.3",
    "httpx>=0.28.1",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.14.3",
    "chromadb>=0.6.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
local2 = "local.cli:main"

[tool.hatch.build]
artifacts = ["src/local/api/static/**"]

[tool.hatch.build.targets.wheel]
packages = ["src/local"]
